Start experiment with 3D

--- a/ArcgisWeb/tryout/index.html
+++ b/ArcgisWeb/tryout/index.html
@@ -11,11 +11,10 @@
 </head>
 <body>
 <div class="container mt-3">
-  <div class="row">
-    <div class="col">
-      <a class="btn btn-primary" href="src/pages/eigen-locatie.html">Eigen locatie experiment 2D</a>
+    <div class="d-flex justify-content-center">
+        <a class="btn btn-primary mx-2" href="src/pages/eigen-locatie.html">Eigen locatie experiment 2D</a>
+        <a class="btn btn-primary mx-2" href="src/pages/scene.html">3D Scene</a>
     </div>
-  </div>
 </div>
 <script type="module" src="/src/main.ts"></script>
 </body>
