--- a/ArcgisWeb/tryout/src/pages/scene.html
+++ b/ArcgisWeb/tryout/src/pages/scene.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Eigen locatie experiment</title>
+    <title>3D Scene</title>
     <link rel="stylesheet" href="https://js.arcgis.com/4.24/@arcgis/core/assets/esri/themes/light/main.css">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 <div id="viewDiv"></div>
-<script type="module" src="eigen-locatie.ts"></script>
+<script type="module" src="scene.ts"></script>
 </body>
 </html>
