3D buildings in San Fransisco

--- a/ArcgisWeb/tryout/index.html
+++ b/ArcgisWeb/tryout/index.html
@@ -14,6 +14,7 @@
     <div class="d-flex justify-content-center">
         <a class="btn btn-primary mx-2" href="src/pages/eigen-locatie.html">Eigen locatie experiment 2D</a>
         <a class="btn btn-primary mx-2" href="src/pages/scene.html">3D Scene</a>
+        <a class="btn btn-primary mx-2" href="src/pages/gebouwen.html">Gebouwen</a>
     </div>
 </div>
 <script type="module" src="/src/main.ts"></script>
