--- a/ArcgisWeb/tryout/src/pages/gebouwen.html
+++ b/ArcgisWeb/tryout/src/pages/gebouwen.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <title>Gebouwen</title>
-    <link rel="stylesheet" href="https://js.arcgis.com/4.24/@arcgis/core/assets/esri/themes/light/main.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet"
+          href="https://js.arcgis.com/4.24/esri/themes/light/main.css">
+    <link rel="stylesheet"
+          href="../style.css">
 </head>
 <body>
 <div id="viewDiv"></div>
