--- a/infra-viewer/apps/website/src/index.html
+++ b/infra-viewer/apps/website/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <infra-viewer-root></infra-viewer-root>
+    <app-root></app-root>
   </body>
 </html>
