--- a/ArcgisWeb/tryout/index.html
+++ b/ArcgisWeb/tryout/index.html
@@ -4,20 +4,13 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite + TS</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Experiment 1</title>
+    <link rel="stylesheet"
+          href="https://js.arcgis.com/4.24/esri/themes/light/main.css">
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-<div class="container mt-3">
-    <div class="d-flex justify-content-center">
-        <a class="btn btn-primary mx-2" href="src/pages/eigen-locatie.html">Eigen locatie experiment 2D</a>
-        <a class="btn btn-primary mx-2" href="src/pages/scene.html">3D Scene</a>
-        <a class="btn btn-primary mx-2" href="src/pages/gebouwen.html">Gebouwen</a>
-        <a class="btn btn-primary mx-2" href="src/pages/projection.html">Projection</a>
-    </div>
-</div>
-<script type="module" src="/src/main.ts"></script>
+<div id="viewDiv"></div>
+<script type="module" src="index.ts"></script>
 </body>
 </html>
