--- a/ArcgisWeb/tryout/src/pages/index.html
+++ b/ArcgisWeb/tryout/src/pages/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 <div id="viewDiv"></div>
-<script type="module" src="gebouwen.ts"></script>
+<script type="module" src="index.ts"></script>
 </body>
 </html>
