--- a/infra-viewer/apps/website/src/index.html
+++ b/infra-viewer/apps/website/src/index.html
@@ -6,12 +6,12 @@
   <base href="/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-  <link
-    rel="stylesheet"
-    href="https://js.arcgis.com/4.24/esri/themes/light/main.css"
-  />
+  <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/light/main.css"/>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#02357c">
 </head>
 <body>
 <app-root></app-root>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
