--- a/infra-viewer/apps/website/src/index.html
+++ b/infra-viewer/apps/website/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>Website</title>
-  <base href="/"/>
+  <base href="./"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/light/main.css"/>
