--- a/infra-viewer/apps/website/src/index.html
+++ b/infra-viewer/apps/website/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>Website</title>
-  <base href="./"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-  <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/light/main.css"/>
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#02357c">
+  <base href="./" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <link href="favicon.ico" rel="icon" type="image/x-icon" />
+  <link href="https://js.arcgis.com/4.24/esri/themes/light/main.css" rel="stylesheet" />
+  <link href="manifest.webmanifest" rel="manifest">
+  <meta content="#02357c" name="theme-color">
 </head>
 <body>
 <app-root></app-root>
